languages/montiarc-fe/src/test/resources/contextconditions/invalid/StateDefinedMultipleTimes.arc
package invalid;

component StateDefinedMultipleTimes {


	automaton StateDefinedMultipleTimesAutomaton{

		state A, B, C;

		initial A;

		state B, C;

		A->B;
		A->C;
	}

}